--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
 
 
@@ -41,11 +42,11 @@
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
                     <select class="custom-select mr-sm-2" id="q1">
                         <option selected>Choose...</option>
-                        <option value="1">One</option>
+                        <option value="1">One (Strongly Disagree)</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                         <option value="4">Four</option>
-                        <option value="5">Five</option>
+                        <option value="5">Five (strongly Agree)</option>
                     </select>
                 </div>
             </div>
@@ -60,11 +61,11 @@
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
                     <select class="custom-select mr-sm-2" id="q2">
                         <option selected>Choose...</option>
-                        <option value="1">One</option>
+                        <option value="1">One (Strongly Disagree)</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                         <option value="4">Four</option>
-                        <option value="5">Five</option>
+                        <option value="5">Five (strongly Agree)</option>
                     </select>
                 </div>
             </div>
@@ -78,11 +79,11 @@
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
                     <select class="custom-select mr-sm-2" id="q3">
                         <option selected>Choose...</option>
-                        <option value="1">One</option>
+                        <option value="1">One (Strongly Disagree)</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                         <option value="4">Four</option>
-                        <option value="5">Five</option>
+                        <option value="5">Five (strongly Agree)</option>
                     </select>
                 </div>
             </div>
@@ -90,17 +91,18 @@
             <h3>
                 <strong>Question 4</strong>
             </h3>
-            <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+            <h4>Your mind is always buzzing with 
+                 ideas and plans.</h4>
             <div class="form-row align-items-center">
                 <div class="col-auto my-1">
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
                     <select class="custom-select mr-sm-2" id="q4">
                         <option selected>Choose...</option>
-                        <option value="1">One</option>
+                        <option value="1">One (Strongly Disagree)</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                         <option value="4">Four</option>
-                        <option value="5">Five</option>
+                        <option value="5">Five (strongly Agree)</option>
                     </select>
                 </div>
             </div>
@@ -114,11 +116,11 @@
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
                     <select class="custom-select mr-sm-2" id="q5">
                         <option selected>Choose...</option>
-                        <option value="1">One</option>
+                        <option value="1">One (Strongly Disagree)</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                         <option value="4">Four</option>
-                        <option value="5">Five</option>
+                        <option value="5">Five (strongly Agree)</option>
                     </select>
                 </div>
             </div>
@@ -132,11 +134,11 @@
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
                     <select class="custom-select mr-sm-2" id="q6">
                         <option selected>Choose...</option>
-                        <option value="1">One</option>
+                        <option value="1">One (Strongly Disagree)</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                         <option value="4">Four</option>
-                        <option value="5">Five</option>
+                        <option value="5">Five (strongly Agree)</option>
                     </select>
                 </div>
             </div>
@@ -150,11 +152,11 @@
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
                     <select class="custom-select mr-sm-2" id="q7">
                         <option selected>Choose...</option>
-                        <option value="1">One</option>
+                        <option value="1">One (Strongly Disagree)</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                         <option value="4">Four</option>
-                        <option value="5">Five</option>
+                        <option value="5">Five (strongly Agree)</option>
                     </select>
                 </div>
             </div>
@@ -168,11 +170,11 @@
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
                     <select class="custom-select mr-sm-2" id="q8">
                         <option selected>Choose...</option>
-                        <option value="1">One</option>
+                        <option value="1">One (Strongly Disagree)</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                         <option value="4">Four</option>
-                        <option value="5">Five</option>
+                        <option value="5">Five (strongly Agree)</option>
                     </select>
                 </div>
             </div>
@@ -186,11 +188,11 @@
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
                     <select class="custom-select mr-sm-2" id="q9">
                         <option selected>Choose...</option>
-                        <option value="1">One</option>
+                        <option value="1">One (Strongly Disagree)</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                         <option value="4">Four</option>
-                        <option value="5">Five</option>
+                        <option value="5">Five (strongly Agree)</option>
                     </select>
                 </div>
             </div>
@@ -204,11 +206,11 @@
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
                     <select class="custom-select mr-sm-2" id="q10">
                         <option selected>Choose...</option>
-                        <option value="1">One</option>
+                        <option value="1">One (Strongly Disagree)</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                         <option value="4">Four</option>
-                        <option value="5">Five</option>
+                        <option value="5">Five (strongly Agree)</option>
                     </select>
                 </div>
             </div>
@@ -218,7 +220,7 @@
             <br>
 
             <!-- Submit Button -->
-            <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit">
+            <button type="submit" class="btn btn-primary btn-lg btn-block" id="submitButton">
                 <i class="fa fa-check-circle" aria-hidden="true"></i>
                 Submit</button>
 
@@ -235,11 +237,11 @@
     </div>
 
     <!-- Modal -->
-    <div id="results-modal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
+    <!-- <div id="results-modal" class="modal fade" role="dialog">
+        <div class="modal-dialog"> -->
 
             <!-- Modal content-->
-            <div class="modal-content">
+            <!-- <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">×</button>
                     <h2 class="modal-title">
@@ -256,34 +258,34 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
 
     <script type="text/javascript">
 
         // Capture the form inputs
-        $("#submit").on("click", function (event) {
+        $("#submitButton").on("click", function (event) {
             event.preventDefault();
 
             // Create an object for the user"s data
             var userData = {
-                name: $("#name").val(),
-                photo: $("#photo").val(),
+                name: $("#name").val().trim(),
+                photo: $("#photo").val().trim(),
                 scores: [
-                    $("#q1").val(),
-                    $("#q2").val(),
-                    $("#q3").val(),
-                    $("#q4").val(),
-                    $("#q5").val(),
-                    $("#q6").val(),
-                    $("#q7").val(),
-                    $("#q8").val(),
-                    $("#q9").val(),
-                    $("#q10").val()
+                    $("#q1").val().trim(),
+                    $("#q2").val().trim(),
+                    $("#q3").val().trim(),
+                    $("#q4").val().trim(),
+                    $("#q5").val().trim(),
+                    $("#q6").val().trim(),
+                    $("#q7").val().trim(),
+                    $("#q8").val().trim(),
+                    $("#q9").val().trim(),
+                    $("#q10").val().trim()
                 ]
             };
             console.log('userData = ' + JSON.stringify(userData));
             // AJAX post the data to the friends API.
-            $.post("/api/friends", userData, function (data) {
+            $.post("/api/friends", userData).done ( function (data) {
 
                 // Grab the result from the AJAX post so that the best match's name and photo are displayed.
                 console.log("response = " + JSON.stringify(data));
@@ -299,8 +301,7 @@
         });
     </script>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
