cleaned up code

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -10,10 +10,8 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
-
 
 <body>
 
@@ -36,7 +34,7 @@
             <h3>
                 <strong>Question 1</strong>
             </h3>
-            <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+            <h4>I enjoy meeting new people.</h4>
             <div class="form-row align-items-center">
                 <div class="col-auto my-1">
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
@@ -55,7 +53,7 @@
             <h3>
                 <strong>Question 2</strong>
             </h3>
-            <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+            <h4>I sometimes make mistakes.</h4>
             <div class="form-row align-items-center">
                 <div class="col-auto my-1">
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
@@ -70,10 +68,11 @@
                 </div>
             </div>
             <hr>
+
             <h3>
                 <strong>Question 3</strong>
             </h3>
-            <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+            <h4>I'm easily disappointed.</h4>
             <div class="form-row align-items-center">
                 <div class="col-auto my-1">
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
@@ -88,11 +87,11 @@
                 </div>
             </div>
             <hr>
+
             <h3>
                 <strong>Question 4</strong>
             </h3>
-            <h4>Your mind is always buzzing with 
-                 ideas and plans.</h4>
+            <h4>I plan to conquer the world one day.</h4>
             <div class="form-row align-items-center">
                 <div class="col-auto my-1">
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
@@ -107,10 +106,11 @@
                 </div>
             </div>
             <hr>
+
             <h3>
                 <strong>Question 5</strong>
             </h3>
-            <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+            <h4>I enjoy repairing things.</h4>
             <div class="form-row align-items-center">
                 <div class="col-auto my-1">
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
@@ -125,10 +125,11 @@
                 </div>
             </div>
             <hr>
+
             <h3>
                 <strong>Question 6</strong>
             </h3>
-            <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+            <h4>I like to understand the underlying theory.</h4>
             <div class="form-row align-items-center">
                 <div class="col-auto my-1">
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
@@ -143,10 +144,11 @@
                 </div>
             </div>
             <hr>
+
             <h3>
                 <strong>Question 7</strong>
             </h3>
-            <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+            <h4>I am modest about what I have achieved.</h4>
             <div class="form-row align-items-center">
                 <div class="col-auto my-1">
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
@@ -161,10 +163,11 @@
                 </div>
             </div>
             <hr>
+
             <h3>
                 <strong>Question 8</strong>
             </h3>
-            <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+            <h4>I usually feel relaxed.</h4>
             <div class="form-row align-items-center">
                 <div class="col-auto my-1">
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
@@ -179,10 +182,11 @@
                 </div>
             </div>
             <hr>
+
             <h3>
                 <strong>Question 9</strong>
             </h3>
-            <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+            <h4>I crack under pressure.</h4>
             <div class="form-row align-items-center">
                 <div class="col-auto my-1">
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
@@ -197,10 +201,11 @@
                 </div>
             </div>
             <hr>
+
             <h3>
                 <strong>Question 10</strong>
             </h3>
-            <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+            <h4>I like meeting new people.</h4>
             <div class="form-row align-items-center">
                 <div class="col-auto my-1">
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
@@ -214,17 +219,18 @@
                     </select>
                 </div>
             </div>
-
             <hr>
+
             <br>
             <br>
 
-            <!-- Submit Button -->
+            <!-- Submit Button  -->
             <button type="submit" class="btn btn-primary btn-lg btn-block" id="submitButton">
                 <i class="fa fa-check-circle" aria-hidden="true"></i>
-                Submit</button>
-
+                Submit
+            </button>
             <hr>
+            
             <footer class="footer">
                 <div class="container">
                     <p>
@@ -233,32 +239,29 @@
                     </p>
                 </div>
             </footer>
-
+        </form>
     </div>
 
     <!-- Modal -->
-    <!-- <div id="results-modal" class="modal fade" role="dialog">
-        <div class="modal-dialog"> -->
-
-            <!-- Modal content-->
-            <!-- <div class="modal-content">
+    <div class="modal" tabindex="-1" role="dialog" id="modal1">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">×</button>
-                    <h2 class="modal-title">
-                        <strong>Best Match</strong>
-                    </h2>
+                    <h5 class="modal-title">Your new best friend is...</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
-                    <h2 id="match-name"></h2>
-                    <img id="match-img" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
+                    <h5 id="userMatch"></h5>
+                    <img id="userMatchImage" class="materialboxed" width="95%" src="">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
             </div>
-
         </div>
-    </div> -->
+    </div>
 
     <script type="text/javascript">
 
@@ -285,22 +288,21 @@
             };
             console.log('userData = ' + JSON.stringify(userData));
             // AJAX post the data to the friends API.
-            $.post("/api/friends", userData).done ( function (data) {
+            $.post("/api/friends", userData).done(function (data) {
 
                 // Grab the result from the AJAX post so that the best match's name and photo are displayed.
                 console.log("response = " + JSON.stringify(data));
 
-                $("#match-name").text(data.name);
-                $("#match-img").attr("src", data.photo);
+                $('#userMatch').html(data.userMatch);
+                $("#userMatchImage").attr("src", data.userMatchImage);
+                $('#modal1').modal(data);
 
-                // Show the modal with the best match
-                $("#results-modal").modal("toggle");
-
+                console.log(data.name);
+                console.log(data.image);
             });
-
         });
-    </script>
 
+    </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
